<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tabLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/tablogo"
            android:src="@mipmap/ic_tab"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/openDate"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:text="@string/open_date"

                android:textColor="@color/colorPrimaryDark2" />

            <TextView
                android:id="@+id/closeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/Close_Date"
                android:textColor="@color/colorPrimaryDark2"
                tools:text="Close Date :" />

            <TextView
                android:id="@+id/MaxBAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textColor="@color/colorPrimaryDark2"
                tools:text="Max BAC:" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imagehungover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/washangoversign"
            android:visibility="visible"
            android:src="@android:drawable/presence_invisible" />

    </LinearLayout>

</android.support.v7.widget.CardView>
